--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             // Try multiple configuration options to hide the download button
             const config = {
               layout: "modern",
-              theme: "default",
+              theme: "solarized",
               hideDownloadButton: true,
               hideExport: true,
               downloadUrl: false,
